--- a/css/media.css
+++ b/css/media.css
@@ -388,6 +388,9 @@
 	.two{
 		flex-basis: 100%;
 	}
+	.menu-block {
+   		padding: 80px 0 0 0;
+	}
 	.menu-nav a {
     		font-size: 20px;
 	}
@@ -446,7 +449,8 @@
 	.seven{
 		flex-basis: 100%;
 		height: 300px;
-		background-position:90% 50%;
+		background-position: 100% 100%;
+    		background-size: 252px 202px;
 	}
 	.seven_tex_column {
     		padding: 50px 0 0 10%;
@@ -458,8 +462,8 @@
 	.eight{
 		flex-basis: 100%;
 		height: 300px;
-		background-position: 80% 100%;
-		background-size: 230px 300px;
+		background-position: 90% 100%;
+    		background-size: 160px 230px;
 	}
 	.eight_tex_column {
     		padding: 50px 0 0 10%;
@@ -478,7 +482,8 @@
 	.nine{
 		flex-basis: 100%;
 		height: 300px;
-		background-position: 80% 50%;
+		background-position: 90% 100%;
+		background-size: 136px 201px;
 	}
 	.nine_tex_column {
     		padding: 50px 0 0 10%;
