--- a/css/style.css
+++ b/css/style.css
@@ -892,7 +892,7 @@ a{
 }
 .menu-nav a {
   	text-decoration: none;
- 	color: #222;
+ 	color: #fefefe;
   	display: inline-block;
   	margin-right: 15px;
   	transition: 2s;
@@ -917,7 +917,7 @@ a{
   	opacity: 1;
   	visibility: visible;
   	position: relative;
-  	background-color: #f6fcfb;
+  	background-color: #f8c255;
 }
 
 
