--- a/css/media.css
+++ b/css/media.css
@@ -372,7 +372,7 @@
 		height: 100vh;
 	}
 	.logo_box {
-    		padding: 15% 0 0 20%;
+    		padding: 30vh 0 0 25%;
 	}
 	.cher_logo {
     		position: absolute;
