--- a/css/media.css
+++ b/css/media.css
@@ -372,7 +372,7 @@
 		height: 100vh;
 	}
 	.logo_box {
-    		padding: 30vh 0 0 25%;
+    		padding: 40% 0 0 20%;
 	}
 	.cher_logo {
     		position: absolute;
